<h3>August 29, 2017</h3>
<b><u>MAP</u></b>
 - Add special drifter icon on the map. Add/Edit drifters through the context menu on C5 or C6 wormholes.
 - Add 'rally point broadcast' function. Available via the context menu.

<h3>August 7, 2017</h3>
<b><u>VIPPY</u></b>
 - I am (more or less) done with the back-end rework and new subscription model.
   <strong>Starting in September</strong> VIPPY will start automatically calculating your monthly subscription, based on the amount of your groups active users.
   You can find a more detailed description on the <a href="/help/subscription">help pages</a>. Please get in touch if you have additional questions or concerns.

<b><u>MAP</u></b>
<b>System Contextmenu</b>
 - Moved 'remove connected systems' futher down to (hopefully) prevent accidental clicks. Even though there is a confirmation dialog...
 - Add an option to rename a system, rather having to do it from the (cumbersome) form at the bottom right of the page.
 - Changed the 'remove from known systems' to 'edit known systems'.



<h3>July 12, 2017</h3>
<b><u>CREST</u></b>
 - Fixed the error when adding a fleet.

<b><u>VIPPY</u></b>
 - Fixed a potential security hole for people in multiple vippy groups <strong>and</strong> with admin roles in one of those groups.



<h3>May, 2017</h3>
<h4><strong>!! <a href="/system/anniversary" target="_blank">VIPPY's 5 YEAR ANNIVERSARY</a> !!</strong></h4>


<h3>April 19, 2017</h3>
<b><u>ACCESS LIST</u></b>
 - Fixed a bug where adding a corporation to an access-list didn't give that corp access.



<h3>April 05, 2017</h3>
<b><u>MAP</u></b>
 - Fixed a bug where sometimes a system would not be marked as fully scanned, even though all sigs are known.
 - Added confirmation dialogs for deleting a system from the map. FINALLY!



<h3>March 15, 2017</h3>
<b><u>VIPPY</u></b>
 - Made some adjustments to try and fix the lag that Vippy is having issues with lately.

<b><u>MAP</u></b>