@@ -1,17 +1,10 @@
 <div class="content">
-	<div class="col6">
+	<div class="col5">
 		<div>
 			<p>
 				Need help?<br />
 				Have questions?<br />
 				Please don't hesitate to contact <a href="https://gate.eveonline.com/profile/bloemkoolsaus" target="_blank">Bloemkoolsaus</a>!
-			</p>
-		</div>
-		<div style="margin-top: 2em;">
-			<h3>Ingame</h3>
-			<p>
-				You can contact me ingame, via eve-mail or via direct convo (if i'm on) on
-				<a href="https://gate.eveonline.com/profile/bloemkoolsaus" target="_blank">Bloemkoolsaus</a>
 			</p>
 		</div>
 		<div style="margin-top: 2em;">
@@ -25,19 +18,23 @@
 				If you do not want others to know you're using Vippy, don't join the discord.
 			</p>
 		</div>
+		<div style="margin-top: 2em;">
+			<h3>Ingame</h3>
+			<p>
+				You can also contact me ingame, via eve-mail or via direct convo (if i'm on) on
+				<a href="https://gate.eveonline.com/profile/bloemkoolsaus" target="_blank">Bloemkoolsaus</a>
+			</p>
+		</div>
 	</div>
-	<div class="col6 right last">
+	<div class="col7 right last">
 		<div class="standout">
-			<h3 style="padding: 0; margin: 0;">DISCLAMER</h3>
-			<div style="padding: .5em;">
-				Whenever you do contact me, I will try my best to respond as quickly as possible.
+			<img src="/images/default/notifications/warning.png" align="left" style="margin-right: 1em; margin-top: 2.2em; margin-bottom: 1em;">
+			<div style="padding: .5em; font-weight: bold; color: #ffffff;">
+				DISCLAIMER
 			</div>
-			<div style="padding: .5em;">
-				However, please keep in mind that I have a job, a household, a RL <strong>and</strong> a corporation to run.
-				It may take me some time to reply.
-			</div>
-			<div style="padding: .5em;">
-				Your odds of getting quick reply are better if you use Discord though, as I'm able to use discord while at work :)
+			<div style="padding: .5em; padding-top: 0;">
+				Please keep in mind that I have a job, a household, a corporation  <strong>and</strong> a RL to run.
+				I may <strong>not</strong> always be able to respond immediately.
 			</div>
 		</div>
 	</div>
